--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,21 +7,9 @@ spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
 ######################################## mvc #############################################################
-
-### home DB
-#spring.primary.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-#spring.primary.datasource.jdbc-url=jdbc:log4jdbc:postgresql://localhost/postgres
-#spring.primary.datasource.username=postgres
-#spring.primary.datasource.password=1234
-#spring.primary.datasource.hikari.auto-commit=false
-#spring.primary.datasource.hikari.minimum-idle=10
-#spring.primary.datasource.hikari.maximum-pool-size=50
-#spring.primary.datasource.hikari.connection-timeout=100000
-#spring.primary.datasource.hikari.pool-name=primary-pool
-
 ### work DB
 spring.primary.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.primary.datasource.jdbc-url=jdbc:log4jdbc:postgresql://10.10.20.219:5432/demo
+spring.primary.datasource.jdbc-url=jdbc:log4jdbc:postgresql://localhost:5432/demo
 spring.primary.datasource.username=demo
 spring.primary.datasource.password=demo1!
 spring.primary.datasource.hikari.auto-commit=true
