chore: properties 수정

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,47 +1,32 @@
-##default port
-#server.port=8080
-######################################### mvc #############################################################
-##spring mvc
-#spring.mvc.view.prefix=/WEB-INF/jsp/
-#spring.mvc.view.suffix=.jsp
-###### url encoding
-#server.servlet.encoding.charset=utf-8
-###### spring file Size
-#spring.servlet.multipart.max-file-size=10MB
-##server.servlet.context-path=/
-######################################### mvc #############################################################
-#
-#### datasource bss
-#### home DB
-#spring.primary.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-#spring.primary.datasource.jdbc-url=jdbc:log4jdbc:postgresql://localhost/postgres
-#spring.primary.datasource.username=postgres
-#spring.primary.datasource.password=1234
-#spring.primary.datasource.hikari.auto-commit=false
-#spring.primary.datasource.hikari.minimum-idle=10
-#spring.primary.datasource.hikari.maximum-pool-size=50
-#spring.primary.datasource.hikari.connection-timeout=100000
-#spring.primary.datasource.hikari.pool-name=primary-pool
-#
-#### work DB
-##spring.primary.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-##spring.primary.datasource.jdbc-url=jdbc:log4jdbc:postgresql://10.10.20.219:5432/demo
-##spring.primary.datasource.username=demo
-##spring.primary.datasource.password=demo1!
-##spring.primary.datasource.hikari.auto-commit=false
-##spring.primary.datasource.hikari.minimum-idle=10
-##spring.primary.datasource.hikari.maximum-pool-size=50
-##spring.primary.datasource.hikari.connection-timeout=100000
-##spring.primary.datasource.hikari.pool-name=primary-pool
-#
-## mybatis
-#mybatis.config=mybatis-config.xml
-#mybatis.type-aliases-package:com.example.demo
-#mybatis.mapper-locations:mybatis/mapper/*.xml
-#
-######################################### frame work #####################################################
-#interceptor.excludePaths=/css/**,/img/**,/images/**,/js/**,/postcode, /postcodeResult, /index.html, /, /UbiServer,/ubi4/**,/ubi4/*.*,/update/Nara119.msi,/common/DownloadImg, /login/**, /userjoin/**, /loginProcess, /favicon.ico, /test
-#server.error.path=/defaultError
-#
-#bss.mapperDir=file:src/main/resources/mapper/bss/**/*.xml
-#bss.attach.path=WEB-INF/attach1
+#default port
+server.port=8080
+
+######################################## mvc #############################################################
+#spring mvc
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+
+######################################## mvc #############################################################
+
+### work DB
+spring.primary.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.primary.datasource.jdbc-url=jdbc:log4jdbc:postgresql://localhost:5432/demo
+spring.primary.datasource.username=demo
+spring.primary.datasource.password=demo1!
+spring.primary.datasource.hikari.auto-commit=true
+spring.primary.datasource.hikari.minimum-idle=10
+spring.primary.datasource.hikari.maximum-pool-size=50
+spring.primary.datasource.hikari.connection-timeout=100000
+spring.primary.datasource.hikari.pool-name=primary-pool
+
+######################################## frame work #####################################################
+
+interceptor.excludePaths = /css/**, /img/**, /images/**, /js/**, /common/DownloadImg, /login, /userjoin, /loginProcess, /favicon.ico
+server.error.path=/defaultError
+
+bss.mapperDir = file:src/main/resources/mapper/bss/**/*.xml
+bss.attach.path = WEB-INF/attach1
+
+#server.servlet.context-path="/backoffice"
+
+kakao.api.key=
