--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,35 +1,32 @@
-##default port
-#server.port=8080
-#
-######################################### mvc #############################################################
-##spring mvc
-#spring.mvc.view.prefix=/WEB-INF/jsp/
-#spring.mvc.view.suffix=.jsp
-#
-###### url encoding
-#server.servlet.encoding.charset=utf-8
-#
-###### spring file Size
-#spring.servlet.multipart.max-file-size=10MB
-#
-##server.servlet.context-path=/backoffice
-#
-######################################### mvc #############################################################
-#### datasource bss
-#spring.primary.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-#spring.primary.datasource.jdbc-url=jdbc:log4jdbc:postgresql://10.10.20.30:5466/sj_dev
-#spring.primary.datasource.username=BSS
-#spring.primary.datasource.password=ENC(snGU7WK84RzFZbYtOrnn+A==)
-#spring.primary.datasource.hikari.auto-commit=false
-#spring.primary.datasource.hikari.minimum-idle=10
-#spring.primary.datasource.hikari.maximum-pool-size=50
-#spring.primary.datasource.hikari.connection-timeout=100000
-#spring.primary.datasource.hikari.pool-name=primary-pool
-#
-######################################### frame work #####################################################
-#
-#interceptor.excludePaths = /css/**,/img/**,/images/**,/js/**,/postcode, /postcodeResult, /index.html, /, /UbiServer,/ubi4/**,/ubi4/*.*,/update/Nara119.msi,/common/DownloadImg, /login, /loginProcess, /favicon.ico
-#server.error.path=/defaultError
-#
-#bss.mapperDir=classpath*:/mapper/bss/**/*.xml
-#bss.attach.path=/data/attach/
+#default port
+server.port=8080
+
+######################################## mvc #############################################################
+#spring mvc
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+
+######################################## mvc #############################################################
+
+### work DB
+spring.primary.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.primary.datasource.jdbc-url=jdbc:log4jdbc:postgresql://localhost:5432/demo
+spring.primary.datasource.username=demo
+spring.primary.datasource.password=demo1!
+spring.primary.datasource.hikari.auto-commit=true
+spring.primary.datasource.hikari.minimum-idle=10
+spring.primary.datasource.hikari.maximum-pool-size=50
+spring.primary.datasource.hikari.connection-timeout=100000
+spring.primary.datasource.hikari.pool-name=primary-pool
+
+######################################## frame work #####################################################
+
+interceptor.excludePaths = /css/**, /img/**, /images/**, /js/**, /common/DownloadImg, /login, /userjoin, /loginProcess, /favicon.ico
+server.error.path=/defaultError
+
+bss.mapperDir = file:src/main/resources/mapper/bss/**/*.xml
+bss.attach.path = WEB-INF/attach1
+
+#server.servlet.context-path="/backoffice"
+
+kakao.api.key=
